# betaflight-sitl

./: pyproject.toml
sitl/: drone_env.py  gamepad.py  logging_utils.py  sim_base.py  simulator.py
